*******************************
******** RELEASE NOTES ********
*******************************

**************************
**** 0.1.3 - 09/07-20 ****
**************************

******************
**** Features ****
******************


******************
***** Fixes ******
******************


******************
** Improvements **
******************

 * ContentLoader can now be reached from within a Entity

**************************
**** 0.1.2 - 08/07-20 ****
**************************

******************
**** Features ****
******************

 * Added DrawOrder property to IDrawable
 * Added a DrawStack class accessible in Scenes and Entities
 * Added a UpdateLoop class accessible in Scenes and Entities
 * Added Drawable and Logic Manager to Entity, Scene and Game for Creating and Destroying logics and Drawables

******************
***** Fixes ******
******************

 * Removed interface IHasLogic added CreateLogic function to Entity2d and Scene instead.
 * Removed class LogicMulti

******************
** Improvements **
******************


**************************
**** 0.1.1 - 27/04-20 ****
**************************

******************
**** Features ****
******************

 * Added DrawableFont with new line support
 * Added Mouse Input Service and Hardware for TypeODesktop and TypeOSDL
 * Added SDL flags to SDLModuleOption in TypeOSDL
 * Added the ability to create a Anchor on a Entity2d object

******************
***** Fixes ******
******************

 * Changed Color, Plane, Ray, Rectangle, Vec2 and Vec3 back to being Structs, oops
 * Changed interface name IIsDrawable to IDrawable
 * Removed interface IHasDrawable added CreateDrawable function to Entity2d and Scene instead.
 * Removed class DrawableMulti

******************
** Improvements **
******************

 * Dependency injections can not be set to private properties as well as public

**************************
**** 0.1.0 - 13/03-20 ****
**************************

******************